--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,23 @@
 	<version>0.0.1</version>
 	<packaging>jar</packaging>
 
+    <dependencies>
+    <dependency>
+    <groupId>redis.clients</groupId>
+    <artifactId>jedis</artifactId>
+    <version>2.8.0</version>
+</dependency>
+      <dependency>
+    <groupId>org.mybatis.caches</groupId>
+    <artifactId>mybatis-ehcache</artifactId>
+    <version>1.0.3</version>
+</dependency>
+<dependency>
+    <groupId>org.springframework.data</groupId>
+    <artifactId>spring-data-redis</artifactId>
+    <version>1.7.1.RELEASE</version> 
+</dependency>
+    </dependencies>
 	<name>common</name>
 	<url>http://maven.apache.org</url>
 
