--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<!-- 
-    @author: minn 
-    @QQ:3942986006
-   -->
+	<!-- @author: minn @QQ:3942986006 -->
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>p.minn</groupId>
@@ -16,27 +13,31 @@
 	<version>0.0.1</version>
 	<packaging>jar</packaging>
 
-    <dependencies>
-    <dependency>
-    <groupId>redis.clients</groupId>
-    <artifactId>jedis</artifactId>
-    <version>2.8.0</version>
-</dependency>
-      <dependency>
-    <groupId>org.mybatis.caches</groupId>
-    <artifactId>mybatis-ehcache</artifactId>
-    <version>1.0.3</version>
-</dependency>
-<dependency>
-    <groupId>org.springframework.data</groupId>
-    <artifactId>spring-data-redis</artifactId>
-    <version>1.7.1.RELEASE</version> 
-</dependency>
-    </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.8.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mybatis.caches</groupId>
+			<artifactId>mybatis-ehcache</artifactId>
+			<version>1.0.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-redis</artifactId>
+			<version>1.7.1.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.mybatis.caches</groupId>
+			<artifactId>mybatis-memcached</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+	</dependencies>
 	<name>common</name>
 	<url>http://maven.apache.org</url>
-
-
 	<organization>
 		<name>minn</name>
 		<url>http://fmfl.iteye.com</url>
