--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
 			<artifactId>mybatis-memcached</artifactId>
 			<version>1.0.0</version>
 		</dependency>
+		<dependency>
+    <groupId>org.mongodb</groupId>
+    <artifactId>mongo-java-driver</artifactId>
+    <version>3.2.2</version>
+</dependency>
+
 	</dependencies>
 	<name>common</name>
 	<url>http://maven.apache.org</url>
